# NamAsta-Diagnostics

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  RELEASING.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0002_seed.sql  0003_panels_fix.sql  0010_fix_ocb_choices.sql  0013_grandfather_setup.sql  0015_sharma_doctors.sql  0016_fix_setup_and_sharma_text.sql  0017_lipid_auto_and_interpretation.sql  0018_exact_lipid_hba1c_text.sql  0019_bun_auto.sql  0020_glucose_interpretations.sql  0021_more_interpretations.sql  0022_soften_interpretations.sql  0023_age_group_ranges.sql  0024_complete_ranges.sql  0025_range_unit.sql  0026_typhidot.sql  0027_report_override.sql  0028_urine_quantity.sql  0029_iggm_split.sql  0030_widal_split.sql  0031_alp_ranges.sql  0032_rft_restructure.sql  0033_footer_settings.sql  0034_elec_revert.sql  0035_dlc_panel.sql  0036_cbc_units_order.sql  0037_dlc_auto_calc.sql  0038_dlc_remove_auto_calc.sql  0039_dlcp_bundle_test.sql  0040_order_unit_override.sql  0041_order_range_override.sql  0042_urine_colour_range.sql  0043_urine_hpf_ranges.sql  0044_haematology_spelling.sql  0045_urine_plus_grading.sql  0046_paid_once_backfill.sql  0047_hba1c_profile.sql  0048_haematology_spelling_fix.sql  0049_biochemistry_dup_tests.sql  0050_patient_baby_flag.sql  (+2 more)
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs
src/app/: AppShell.tsx  CommandPalette.tsx
src/lib/: astm.test.ts  (+32 more)
tools/: bump-version.mjs  gen-license.mjs
(+52 files in other folders)
