[package]
name = "scl-lab-app"
version = "1.3.51"
description = "NamAsta Diagnostics — offline lab management & reporting"
authors = ["NamAsta Diagnostics"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "scl_lab_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Auto-update: check GitHub Releases for a newer signed build, download & install it.
# `process` lets the app relaunch itself after the update is applied.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
chrono = { version = "0.4", features = ["clock"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls", "file-transport"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"] }
serialport = "4"
if-addrs = "0.13"

